--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -1,63 +1,80 @@
-<!DoCTYPE html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-      *{
-        box-sizing:border-box;
-      }
-      h1{
-        text-align:center;
-       background: black;
-       color: white;
-       margin-bottom: 15px;
-      }
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>My Responsive Layout</title>
 
-      .column{
-        position:relative;
-        top: 0px;
-        margin:15px;
-        padding: 25px;
-        border: 3px solid black;
-      }
+</head>
+<style>
 
-      .column-title{
-        position:absolute;
-        border-bottom:2px soild black;
-        border-left: 2px solid black;
-        padding:0px 80px;
-        background:white;
-        right: 0px;
-        left:0 px;
-
-      }
-
-      .column p{
-      margin-top:18px;
-      text-align:justify;
-      front-size:100%;
-      }
-
-      .container{
-        position:relative;
-        top:60px;
-        margin: 15px;
-      }
-
-.row{
-  width:100%;
+*{
+  box-sizing: border-box;
+  margin:0;
+  padding:0;
 }
 
+body{
+  font-family: 'Lato', sans-serif;
+}
 
+.row{
+  width: 100%;
+}
 
+.menu-title{
+  text-align: center;
+  margin-bottom: 30px;
+}
 
-/********** Large devices only **********/
-@media (min-width: 992px) {
+.container{
+ position: relative;
+ top:60px;
+ margin: 15px;
+}
+
+.item{
+  position: relative;
+  top: 0;
+  background-color:#999999;
+  margin: 15px;
+  padding: 25px;
+  border: 3px solid #000;
+}
+
+.item p{
+  margin-top: 18px;
+  text-align: justify;
+  font-size:100%;
+}
+
+.item-title{
+  position: absolute;
+  top:0;
+  right: 0px;
+  background: green;
+  padding: 6px 90px;
+  border-left: 2px solid #000;
+  border-bottom: 2px solid #000;
+}
+
+#title-one {
+  background-color: White;
+}
+
+#title-two{
+  background-color: white;
+}
+
+#title-three{
+  background-color: white;
+}
+
+/* Simple Responsive Framework. */
+/*------ Desktop ------*/
+@media (min-width: 992px){
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-
-
   }
   .col-lg-1 {
     width: 8.33%;
@@ -95,57 +112,68 @@
   .col-lg-12 {
     width: 100%;
   }
+
 }
 
-/********** Medium devices only **********/
-@media (min-width: 768px) and (max-width: 991px) {
-.col-lg-4{
-  width: 50%;
-  float: left;
-}
-.col-lg-5{
-  width: 100%;
-  float: left;
-}
+
+/*------ Tablet ------*/
+@media (min-width: 768px) and (max-width: 991px){
+  .col-lg-4 {
+    width: 50%;
+    float: left;
   }
+  .col-lg-tablet{
+   width: 100%;
+   float: left;
+ }
+}
 
 
+/*------ Mobile ------*/
+@media (max-width: 767px){
+  .col-lg-4{
+    width: 100%;
+    float: left;
+  }
+}
+</style>
+<body>
+  <div class="container">
+    <div class="row">
 
-
-      </style>
-      </head>
-      <body>
-        <div class= container">
-          <div class="row">
-
-
-        <h1 class="menu-tittle"> Module2 </h1>
-        <div class="col-lg-4">
-        <div class= "column">
-        <div class="column-title" id="c1">
-          <h3>One</h3>
+    <h1 class="menu-title">Module2</h1>
+      <div class="col-lg-4">
+        <div class="item">
+          <div class="item-title" id="title-one">
+            <h3>One</h3>
           </div>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary</p>
-          </div>
-          </div>
-          <div class="col-lg-4">
-          <div class= "column">
-          <div class="column-title" id="c2">
-            <h3>Two</h3>
-            </div>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary</p>
-            </div>
-            </div>
-            <div class="col-lg-4 col-lg-5">
-            <div class= "column">
-            <div class="column-title" id="c3">
-              <h3>Three</h3>
-              </div>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary</p>
-              </div>
-              </div>
-              </div>
-              </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non.
+          </p>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="item">
+         <div class="item-title" id="title-two">
+          <h3>Two</h3>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non.
+        </p>
+      </div>
+    </div>
+    <div class="col-lg-4 col-lg-tablet">
+      <div class="item">
+       <div class="item-title" id="title-three">
+        <h3>Three</h3>
+      </div>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa perferendis enim, consequatur obcaecati iusto! Quia aliquam, obcaecati explicabo adipisci non.
+      </p>
+    </div>
+  </div>
 
-              </body>
+</div>
+</div>
+</body>
 </html>
