--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -59,15 +59,15 @@ body{
 }
 
 #title-one {
-  background-color: White;
+  background-color: blue;
 }
 
 #title-two{
-  background-color: white;
+  background-color: yellow;
 }
 
 #title-three{
-  background-color: white;
+  background-color: pink;
 }
 
 /* Simple Responsive Framework. */
